Terminata prima row

--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
 
     <div class="container">
       <!-- First Row -->
+      <!-- First Row -->
       <div class="row">
         <div class="first item">
-
+          <span class="high discount">-30%</span>
+          <span class="heart">&hearts;</span>
         </div>
         <div class="second item">
-
+          <span class="low discount">-5%</span>
+          <span class="heart">&hearts;</span>
         </div>
         <div class="third item">
-
+          <span class="high discount">-30%</span>
+          <span class="heart">&hearts;</span>
         </div>
       </div>
-
-
-
-
-
-
-
-
     </div>
+    <!-- Second Row -->
 
   </body>
 </html>
