--- a/index.html
+++ b/index.html
@@ -25,8 +25,22 @@
           <span class="heart">&hearts;</span>
         </div>
       </div>
+      <!-- Second Row -->
+      <div class="row">
+        <div class="first item">
+          <span class="high discount">-30%</span>
+          <span class="heart">&hearts;</span>
+        </div>
+        <div class="second item">
+          <span class="low discount">-5%</span>
+          <span class="heart">&hearts;</span>
+        </div>
+        <div class="third item">
+          <span class="high discount">-30%</span>
+          <span class="heart">&hearts;</span>
+        </div>
+      </div>
     </div>
-    <!-- Second Row -->
 
   </body>
 </html>
